# Ansible-Tickets

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  mypy.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: testing.yml
ansible_tickets/: __init__.py  cli.py  config.py  runner.py  ticket_management.py
