[metadata]
name = Ansible Tickets
version = 0.0.6
author = Peter McDonald
author_email = git@petermcdonald.co.uk
description = Creates Jira tickets for Ansible failures.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/petermcd/Ansible-Tickets
project_urls =
    Bug Tracker = https://github.com/petermcd/Ansible-Tickets/issues
    Source = https://github.com/petermcd/Ansible-Tickets
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    ansible_tickets = ansible_tickets.cli:init

[options.extras_require]
test = flake8; isort; mypy; wheel
build = wheel; build;

[options.package_data]
monzo.viewer.html = *.html

[flake8]
max-line-length = 150
exclude = venv
